added pic to sec1; moved faq into sec3; styled 3 step process;

--- a/form.html
+++ b/form.html
@@ -17,19 +17,16 @@
     <header>
         <div class="row">
             <div class="col-lg-4">
-                <img id="logo" src="assets/svg/tgjlogoheader(white)2.svg">
+                <a href="index.html"><img id="logo" src="assets/svg/tgjlogoheader(white)2.svg"></a>
             </div>
             <div class="col-lg-4">
-                <div id="headerBut">
-                </div>
             </div>
             <div class="col-lg-4">
                 <nav>
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a class="tgjactive" href="form.html">Form</a></li>
-                        <li><a href="#">Showcase</a></li>
-                        <div></div>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
             </div>
@@ -38,58 +35,60 @@
     <!-- tgj design form -->
     <section id="form">
         <div class="container">
-            <div id="designstartbutton" class="active">
-                <h3>Intro Text</h3>
-                <button id="startdesign">Start</button>
-            </div>
-            <div id="chooseproject">
-                <div class="accordion" id="accordionExample">
-                    <div class="card">
-                        <h5 class="mb-0">
-        <button class="btn btn-link card-header collapsed" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne" id="headingOne">Logo</button></h5>
-                        <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
-                            <div class="card-body">
-                                <div class="row">
-                                    <div class="col-lg-7">
-                                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo.
-                                    </div>
-                                    <div class="col-lg-4">
-                                        <img src="assets/svg/trial.svg">
-                                        <button>Choose Project</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <h5 class="mb-0">
-        <button class="btn btn-link card-header collapsed" id="headingTwo" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Illustration</button></h5>
-                        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-                            <div class="card-body">
-                                <div class="row">
-                                    <div class="col-lg-7">
-                                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo.
-                                    </div>
-                                    <div class="col-lg-4">
-                                        <img src="assets/svg/trial.svg">
-                                        <button>Choose Project</button>
+            <div id="box">
+                <div id="designstartbutton">
+                    <h4>Intro Text</h4>
+                    <button id="startdesign">Start</button>
+                </div>
+                <div id="chooseproject">
+                    <div class="accordion" id="accordionExample">
+                        <div class="card">
+                            <h5 class="mb-0">
+                    <button class="btn btn-link card-header collapsed" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne" id="headingOne">Logo</button></h5>
+                            <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col-lg-7">
+                                            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo.
+                                        </div>
+                                        <div class="col-lg-4">
+                                            <img src="assets/svg/trial.svg">
+                                            <button>Choose Project</button>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="card">
-                        <h5 class="mb-0">
-        <button class="btn btn-link card-header collapsed" id="headingThree" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Website Design</button></h5>
-                        <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-                            <div class="card-body">
-                                <div class="row">
-                                    <div class="col-lg-7">
-                                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo.
+                        <div class="card">
+                            <h5 class="mb-0">
+                    <button class="btn btn-link card-header collapsed" id="headingTwo" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Illustration</button></h5>
+                            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col-lg-7">
+                                            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo.
+                                        </div>
+                                        <div class="col-lg-4">
+                                            <img src="assets/svg/trial.svg">
+                                            <button>Choose Project</button>
+                                        </div>
                                     </div>
-                                    <div class="col-lg-4">
-                                        <img src="assets/svg/trial.svg">
-                                        <button>Choose Project</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <h5 class="mb-0">
+                    <button class="btn btn-link card-header collapsed" id="headingThree" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Website Design</button></h5>
+                            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col-lg-7">
+                                            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo.
+                                        </div>
+                                        <div class="col-lg-4">
+                                            <img src="assets/svg/trial.svg">
+                                            <button>Choose Project</button>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
