style 3step process

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </section>
     <!-- 3 step process -->
     <section id="sec3">
-        <h2>Follow Our Easy 3 Step Process</h2>
+        <h2>Our Simple 3 Step Process</h2>
         <div class="container" id="threestepprocess">
             <div class="row">
                 <div class="col-lg-4">
@@ -90,7 +90,22 @@
             </div>
             <div class="row" id="fullprocess">
                 <div class="col-lg-7">
-                    Picture
+                    <div class="row">
+                        <div class="col-lg-5">
+                            <div id="steponelogo" class="steponepic">Logo Design</div>
+                        </div>
+                        <div class="col-lg-5">
+                            <div id="steponebcards" class="steponepic">Business Card</div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-5">
+                            <div id="steponeweb" class="steponepic">Web Design</div>
+                        </div>
+                        <div class="col-lg-5">
+                            <div id="steponeposter" class="steponepic">Poster/Flyer</div>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-lg-4">
                     <p id="steponeprocess">
