added styling to 3 step process

--- a/index.html
+++ b/index.html
@@ -75,52 +75,47 @@
     </section>
     <!-- 3 step process -->
     <section id="sec3">
-        <h2>Our Simple 3 Step Process</h2>
-        <div class="container" id="threestepprocess">
-            <div class="row">
-                <div class="col-lg-4">
-                    <button id="steponebutton" class="process processactive">1. Choose Your Project</button>
-                </div>
-                <div class="col-lg-4">
-                    <button id="steptwobutton" class="process">2. Fill Out Our Design Survey</button>
-                </div>
-                <div class="col-lg-4">
-                    <button id="stepthreebutton" class="process">3. Submit And Wait</button>
-                </div>
-            </div>
-            <div class="row" id="fullprocess">
-                <div class="col-lg-7">
+        <h2>Designs made easy!</h2>
+        <!-- <div class="container"> -->
+        <div class="row">
+            <div class="col-lg-1"></div>
+            <div class="col-lg-6">
+                <div class="row" id="vbtop">
                     <div class="row">
-                        <div class="col-lg-5">
-                            <div id="steponelogo" class="steponepic">Logo Design</div>
-                        </div>
-                        <div class="col-lg-5">
-                            <div id="steponebcards" class="steponepic">Business Card</div>
-                        </div>
+                        <div id="red" class="vbcircles"></div>
+                        <div id="yellow" class="vbcircles"></div>
+                        <div id="green" class="vbcircles"></div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-5">
-                            <div id="steponeweb" class="steponepic">Web Design</div>
+                        <div class="col-lg">
+                            <div id="vbarrows">< ></div>
                         </div>
-                        <div class="col-lg-5">
-                            <div id="steponeposter" class="steponepic">Poster/Flyer</div>
+                        <div class="col-lg">
+                            <div id="vbsearchbar"></div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4">
-                    <p id="steponeprocess">
-                        First things first, we need to know what kind of design project you want.
-                    </p>
-                    <p id="steptwoprocess" class="active">
-                        Next, we have a straightforward design survey that will help us determine the vision of your project.
-                    </p>
-                    <p id="stepthreeprocess" class="active">
-                        And that's it! Press submit and just wait. We will contact you within the next 24 hours to setup a free consultation.
-                    </p>
+                <div class="row" id="vbbottom">
+                    <div id="vbcontent"></div>
                 </div>
             </div>
+            <button id="prev"><img src="assets/svg/prev_arrow.svg"></button>
+            <div class="col-lg-3">
+                <div id="diffsteps">
+                    <h3 id="stepstitle"></h3>
+                    <p id="stepsdesc"></p>
+                    <br>
+                    <div id="boxone" class="circles activestep"></div>
+                    <div id="boxtwo" class="circles"></div>
+                    <div id="boxthree" class="circles"></div>
+                </div>
+            </div>
+            <button id="next"><img src="assets/svg/next_arrow.svg"></button>
         </div>
-        <!-- FAQ -->
+        <!-- </div> -->
+    </section>
+    <!-- FAQ -->
+    <section id="sec4">
         <div id="faq" class="container">
             <div class="accordion" id="accordionExample">
                 <div class="card">
@@ -161,8 +156,6 @@
                 </div>
             </div>
         </div>
-        <div id="empty">
-        </div>
     </section>
     <!-- client showcase slideshow -->
     <section id="sec5">
@@ -176,12 +169,12 @@
                 <div class="carousel-item active mb-5">
                     <div class="container">
                         <div class="row">
+                            <div class="col-lg-4">
+                                <img class="d-block w-100" src="assets/svg/carousel1.svg" alt="First slide">
+                            </div>
                             <div class="col-lg-7 my-auto ml-0">
                                 <p class="clients">Create a new html file called add.html //make a function called "adder" that take three arguments (x, y, z). // The function should add the arguments together, and log the result to the console. //check if your function works by trying the following lines: /* add(1,2,3); add(3,2,1); add(4,4,4); add(5,6,7); */</p>
                                 <p class="comment">result to the console. //check if your function works by trying the following lines: /* add(1,2,3); add(3,2,1); add(4,4,4); add(5,6,7); </p>
-                            </div>
-                            <div class="col-lg-4">
-                                <img class="d-block w-100" src="assets/svg/carousel1.svg" alt="First slide">
                             </div>
                         </div>
                     </div>
@@ -189,12 +182,12 @@
                 <div class="carousel-item mb-5">
                     <div class="container">
                         <div class="row">
+                            <div class="col-lg-4">
+                                <img class="d-block w-100" src="assets/svg/carousel1.svg" alt="First slide">
+                            </div>
                             <div class="col-lg-7 my-auto ml-0">
                                 <p class="clients">Create a new html file called add.html //make a function called "adder" that take three arguments (x, y, z). // The function should add the arguments together, and log the result to the console. //check if your function works by trying the following lines: /* add(1,2,3); add(3,2,1); add(4,4,4); add(5,6,7); */</p>
                                 <p class="comment">result to the console. //check if your function works by trying the following lines: /* add(1,2,3); add(3,2,1); add(4,4,4); add(5,6,7); </p>
-                            </div>
-                            <div class="col-lg-4">
-                                <img class="d-block w-100" src="assets/svg/carousel1.svg" alt="First slide">
                             </div>
                         </div>
                     </div>
@@ -202,12 +195,12 @@
                 <div class="carousel-item mb-5">
                     <div class="container">
                         <div class="row">
+                            <div class="col-lg-4">
+                                <img class="d-block w-100" src="assets/svg/carousel1.svg" alt="First slide">
+                            </div>
                             <div class="col-lg-7 my-auto ml-0">
                                 <p class="clients">Create a new html file called add.html //make a function called "adder" that take three arguments (x, y, z). // The function should add the arguments together, and log the result to the console. //check if your function works by trying the following lines: /* add(1,2,3); add(3,2,1); add(4,4,4); add(5,6,7); */</p>
                                 <p class="comment">result to the console. //check if your function works by trying the following lines: /* add(1,2,3); add(3,2,1); add(4,4,4); add(5,6,7); </p>
-                            </div>
-                            <div class="col-lg-4">
-                                <img class="d-block w-100" src="assets/svg/carousel1.svg" alt="First slide">
                             </div>
                         </div>
                     </div>
